<resources>
    <string name="app_name">Sofegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    Setting fragment-->
    <string name="settings_default_username">Ruslan Mir</string>
    <string name="setting_status">В сети</string>
    <string name="setting_text_account">Аккаунт</string>
    <string name="setting_default_number">+375 282282323</string>
    <string name="settings_text_label_numberPhone">Нажмите, чтобы изменить номер телефона</string>
    <string name="setting_default_login">RuslanMir</string>
    <string name="settings_text_label_login">Имя пользователя</string>
    <string name="setting_default_bio">О себе</string>
    <string name="settings_text_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_text_entercode">Введите код</string>
    <string name="register_text_sms">Мы отправили СМС с кодом проверки на ваш телефон</string>
    <string name="registerHint_numberPhone">- - - - - -</string>
    <string name="register_title_your_phone">Введите ваш телефон</string>
    <string name="registr_toast_enter">Введите номер телефона</string>
    <string name="fab_discr">FAB</string>
    <string name="enter_fragment_hello">Добро пожаловать</string>
    <string name="settings_input_name_text">Имя</string>
    <string name="settings_hint_input_surname_text">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    
    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>
</resources>